tests/snapshots/codegen__codegen_CallSiteDictPassing.snap
---
source: tests/codegen.rs
expression: js
---
var myShowThing = function(dictMyShow) {
  return function(x) {
    return dictMyShow.myShow(x);
  };
};

var wrapper = function(dictMyShow) {
  return function(x) {
    return myShowThing(dictMyShow)(x);
  };
};

var myShow = function(dict) {
  return dict.myShow;
};


export { myShow, myShowThing, wrapper };
