tests/snapshots/codegen__codegen_CaseExpressions.snap
---
source: tests/codegen.rs
expression: js
---
var multiCase = function (a) {
    return function (b) {
        if (a === 0) {
            return 0;
        }
        if (b === 0) {
            return 0;
        }
        return 1;
    };
};
var Left = /* #__PURE__ */ (function () {
    function Left (value0) {
        this.value0 = value0;
    };
    Left.create = function (value0) {
        return new Left(value0);
    };
    return Left;
})();
var Right = /* #__PURE__ */ (function () {
    function Right (value0) {
        this.value0 = value0;
    };
    Right.create = function (value0) {
        return new Right(value0);
    };
    return Right;
})();
var fromEither = function (e) {
    if (e instanceof Left) {
        return e.value0;
    }
    if (e instanceof Right) {
        return e.value0;
    }
    throw new Error("Failed pattern match");
};
export {
    Left,
    Right,
    fromEither,
    multiCase
};
