tests/snapshots/codegen__codegen_ClassAccessors.snap
---
source: tests/codegen.rs
expression: js
---
var myPure = function (dict) {
    return dict.myPure;
};
var myApply = function (dict) {
    return dict.myApply;
};
var liftA = function (dictMyApplicative) {
    return function (f) {
        return function (a) {
            return myApply(dictMyApplicative.MyApply0())(myPure(dictMyApplicative)(f))(a);
        };
    };
};
export {
    myApply,
    myPure,
    liftA
};
