tests/snapshots/codegen__codegen_ClassMethodDict.snap
---
source: tests/codegen.rs
expression: js
---
var myOrdInt = {
    myCompare: function (v) {
        return function (v1) {
            return 0;
        };
    }
};
var myCompare = function (dict) {
    return dict.myCompare;
};
var lookup = function (dictMyOrd) {
    return function (k) {
        return function (mk) {
            return myCompare(dictMyOrd)(k)(mk);
        };
    };
};
export {
    myCompare,
    myOrdInt,
    lookup
};
