tests/snapshots/codegen__codegen_ConstrainedInstance.snap
---
source: tests/codegen.rs
expression: js
---
var convertIntString = {
    convert: function (v) {
        return "int";
    }
};
var convert = function (dict) {
    return dict.convert;
};
var wrapWithConvert = function (dictMyConvert) {
    return {
        wrap: function (x) {
            return convert(convertIntString)(x);
        }
    };
};
var wrap = function (dict) {
    return dict.wrap;
};
var test = /* #__PURE__ */ wrap(wrapWithConvert(convertIntString))(42);
export {
    convert,
    convertIntString,
    wrap,
    wrapWithConvert,
    test
};
