tests/snapshots/codegen__codegen_ConstrainedValueDict.snap
---
source: tests/codegen.rs
expression: js
---
import * as Data_Show from "../Data.Show/index.js";
var showIt = function (dictShow) {
    return Data_Show.show(dictShow);
};
var test = /* #__PURE__ */ showIt(Data_Show.showInt)(42);
var myPut = function (dict) {
    return dict.myPut;
};
var myGet = function (dict) {
    return dict.myGet;
};
var getValue = function (dictMyState) {
    return myGet(dictMyState);
};
export {
    myGet,
    myPut,
    getValue,
    showIt,
    test
};
