tests/snapshots/codegen__codegen_ConstraintDictApplication.snap
---
source: tests/codegen.rs
expression: js
---
var myClassInt = {
    myMethod: function (v) {
        return "int";
    }
};
var myMethod = function (dict) {
    return dict.myMethod;
};
var constrained = function (dictMyClass) {
    return function (x) {
        return myMethod(dictMyClass)(x);
    };
};
var test = /* #__PURE__ */ constrained(myClassInt)(42);
export {
    myMethod,
    myClassInt,
    constrained,
    test
};
