tests/snapshots/codegen__codegen_DataConstructors.snap
---
source: tests/codegen.rs
expression: js
---
var Just = /* #__PURE__ */ (function () {
    function Just (value0) {
        this.value0 = value0;
    };
    Just.create = function (value0) {
        return new Just(value0);
    };
    return Just;
})();
var Pair = /* #__PURE__ */ (function () {
    function Pair (value0, value1) {
        this.value0 = value0;
        this.value1 = value1;
    };
    Pair.create = function (value0) {
        return function (value1) {
            return new Pair(value0, value1);
        };
    };
    return Pair;
})();
var Red = /* #__PURE__ */ (function () {
    function Red () {
    };
    Red.value = new Red();
    return Red;
})();
var Nothing = /* #__PURE__ */ (function () {
    function Nothing () {
    };
    Nothing.value = new Nothing();
    return Nothing;
})();
var Leaf = /* #__PURE__ */ (function () {
    function Leaf (value0) {
        this.value0 = value0;
    };
    Leaf.create = function (value0) {
        return new Leaf(value0);
    };
    return Leaf;
})();
var Green = /* #__PURE__ */ (function () {
    function Green () {
    };
    Green.value = new Green();
    return Green;
})();
var Branch = /* #__PURE__ */ (function () {
    function Branch (value0, value1) {
        this.value0 = value0;
        this.value1 = value1;
    };
    Branch.create = function (value0) {
        return function (value1) {
            return new Branch(value0, value1);
        };
    };
    return Branch;
})();
var Blue = /* #__PURE__ */ (function () {
    function Blue () {
    };
    Blue.value = new Blue();
    return Blue;
})();
var unaryUse = /* #__PURE__ */ (function () {
    return new Just(42);
})();
var pairUse = /* #__PURE__ */ (function () {
    return new Pair(1, "hello");
})();
var nullaryUse = /* #__PURE__ */ (function () {
    return Red.value;
})();
var nothingUse = /* #__PURE__ */ (function () {
    return Nothing.value;
})();
export {
    Red,
    Green,
    Blue,
    Nothing,
    Just,
    Pair,
    Leaf,
    Branch,
    nullaryUse,
    unaryUse,
    nothingUse,
    pairUse
};
