tests/snapshots/codegen__codegen_DeriveEq.snap
---
source: tests/codegen.rs
expression: js
---
var eq = function ($dict) {
    return $dict.eq;
};
var Red = (function () {
    function Red () {
    };
    Red.value = new Red();
    return Red;
})();
var Green = (function () {
    function Green () {
    };
    Green.value = new Green();
    return Green;
})();
var Blue = (function () {
    function Blue () {
    };
    Blue.value = new Blue();
    return Blue;
})();
var eqColor = {
    eq: function (x) {
        return function (y) {
            if (x instanceof Red && y instanceof Red) {
                return true;
            }
            if (x instanceof Green && y instanceof Green) {
                return true;
            }
            if (x instanceof Blue && y instanceof Blue) {
                return true;
            }
            return false;
        };
    }
};
var Pair = (function () {
    function Pair (value0, value1) {
        this.value0 = value0;
        this.value1 = value1;
    };
    Pair.create = function (value0) {
        return function (value1) {
            return new Pair(value0, value1);
        };
    };
    return Pair;
})();
var eqPair = function ($dictEq) {
    return function ($dictEq) {
        return {
            eq: function (x) {
                return function (y) {
                    if (x instanceof Pair && y instanceof Pair) {
                        return eq($dictEq)(x.value0)(y.value0) && eq($dictEq)(x.value1)(y.value1);
                    }
                    return false;
                };
            }
        };
    };
};
var Point = (function () {
    function Point (value0, value1) {
        this.value0 = value0;
        this.value1 = value1;
    };
    Point.create = function (value0) {
        return function (value1) {
            return new Point(value0, value1);
        };
    };
    return Point;
})();
var eqPoint = {
    eq: function (x) {
        return function (y) {
            if (x instanceof Point && y instanceof Point) {
                return x.value0 === y.value0 && x.value1 === y.value1;
            }
            return false;
        };
    }
};
var Nothing = (function () {
    function Nothing () {
    };
    Nothing.value = new Nothing();
    return Nothing;
})();
var Just = (function () {
    function Just (value0) {
        this.value0 = value0;
    };
    Just.create = function (value0) {
        return new Just(value0);
    };
    return Just;
})();
var eqMaybe = function ($dictEq) {
    return {
        eq: function (x) {
            return function (y) {
                if (x instanceof Nothing && y instanceof Nothing) {
                    return true;
                }
                if (x instanceof Just && y instanceof Just) {
                    return eq($dictEq)(x.value0)(y.value0);
                }
                return false;
            };
        }
    };
};
export {
    Blue,
    Green,
    Just,
    Nothing,
    Pair,
    Point,
    Red,
    eq,
    eqColor,
    eqMaybe,
    eqPair,
    eqPoint
};
