tests/snapshots/codegen__codegen_DeriveEqNewtype.snap
---
source: tests/codegen.rs
expression: js
---
import * as Data_Eq from "../Data.Eq/index.js";
var eqSeed = {
    eq: function (x) {
        return function (y) {
            return x === y;
        };
    }
};
var test = /* #__PURE__ */ Data_Eq.eq(eqSeed)(1)(1);
var Seed = function (x) {
    return x;
};
export {
    Seed,
    eqSeed,
    test
};
